cleanup, addition of previewservie and refactoring some logic

--- a/templates/link/link.html.twig
+++ b/templates/link/link.html.twig
@@ -40,7 +40,7 @@
         <div class="col">
             <h2> Preview </h2>
             <p class="font-italic">
-                This preview uses a 3rd party tool to obtain a screenshot.  The 3rd party servers may reside outside of the united states.
+                This preview uses a <a href="https://www.convertapi.com/">3rd party tool</a> to obtain a screenshot.  The 3rd party servers may reside outside of the united states or the screenshot may be incomplete.
             </p>
 
             {% if link.preview %}
