reworking some of the directions in the exam

--- a/templates/link/index.html.twig
+++ b/templates/link/index.html.twig
@@ -28,5 +28,6 @@
             </tr>
         {% endfor %}
     </table>
-    <a href="{{ path('new') }}" class="btn btn-outline-primary">New Link</a>
+    <h2>Add a New URL</h2>
+    {{ form(form) }}
 {% endblock %}
